vlib/v/checker/tests/struct_ref_fields_init_0_err.vv
struct Foo {
	foo &u8
}

fn main() {
	_ = Foo{0}
	_ = Foo{
		foo: 0
	}

	_ = Foo{unsafe { 0 }}
	_ = Foo{
		foo: unsafe { 0 }
	}
}
